--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "maps-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
-  },
-  "dependencies": {
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-router": "~4.5.15",
-    "@vue/cli-plugin-typescript": "~4.5.15",
-    "@vue/cli-plugin-vuex": "~4.5.15",
-    "@vue/cli-service": "~4.5.15",
-    "@vue/compiler-sfc": "^3.0.0",
-    "typescript": "~4.1.5"
-  }
+	"name": "maps-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"serve": "vue-cli-service serve",
+		"build": "vue-cli-service build"
+	},
+	"dependencies": {
+		"mapbox-gl": "^2.10.0",
+		"vue": "^3.0.0",
+		"vue-router": "^4.0.0-0",
+		"vuex": "^4.0.0-0",
+		"axios": "^0.27.2"
+	},
+	"devDependencies": {
+		"@types/axios": "^0.14.0",
+		"@types/mapbox-gl": "^2.7.6",
+		"@vue/cli-plugin-router": "~4.5.15",
+		"@vue/cli-plugin-typescript": "~4.5.15",
+		"@vue/cli-plugin-vuex": "~4.5.15",
+		"@vue/cli-service": "~4.5.15",
+		"@vue/compiler-sfc": "^3.0.0",
+		"typescript": "~4.1.5"
+	}
 }
